getting everything together again need to fix verses not showing up and also pageination

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ span {
   justify-content: center;
   border-radius: 50px;
   background-color: #3be2ff;
-  z-index: 99999999;
+  z-index: 9999;
 }
 #noti_box_text {
   font-family: Arial, Helvetica, sans-serif;
@@ -91,31 +91,30 @@ span {
   position: fixed;
   background-color: white;
   box-shadow: 0 6px 13px #00000026;
-  z-index: 9;
+  z-index: 994;
   border-radius: 0 0 15px 15px;
   justify-content: space-between;
   width: 100%;
+  max-height: 100vh;
+  overflow-y: scroll;
 }
-.bible_book_navigation_open {
-  z-index: 9999999;
-}
+
 .bible_book_navigation_dark {
-  background: #1f1f1f;
+  background-color: #1f1f1f;
   color: #ffff;
+  border-radius: 0;
+  border-bottom: 1px solid #353535;
   box-shadow: none;
 }
-.b_nav_dd_cont{
+.b_nav_dd_cont {
   padding: 15px 20px;
-  max-height: 90vh;
-  overflow-y:scroll ;
+  height: 90vh;
   /* for testing purpose */
   display: none;
   /* for testing purpose */
-
 }
-.b_nav_titles{
+.b_nav_titles {
   margin: 15px 0;
-
 }
 .b_nav_prev {
   position: relative;
@@ -124,30 +123,31 @@ span {
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
 }
-.b_saved_verse_card{
-  background-color:#f0f0f0;
+.b_saved_verse_card {
+  background-color: #f0f0f0;
   padding: 15px;
   border-radius: 7px;
   margin-bottom: 15px;
 }
-.b_saved_verse_card>h5,.b_saved_verse_card>p{
+.b_saved_verse_card > h5,
+.b_saved_verse_card > p {
   padding-bottom: 10px;
 }
-.svd_verse_footer{
+.svd_verse_footer {
   display: flex;
   align-content: center;
 }
-.svd_verse_footer>i{
+.svd_verse_footer > i {
   padding-right: 15px;
   -webkit-text-stroke: 1.5px #000000;
 }
 /* for saved verses color #00fbff */
-.svd_true{
+.svd_true {
   color: #00fbff;
 }
 .open {
   position: absolute;
-  z-index: 9999;
+  z-index: 999;
   bottom: 65px;
   left: 30px;
   display: flex;
@@ -167,7 +167,7 @@ span {
   position: absolute;
   right: 30px;
   bottom: 65px;
-  z-index: 999;
+  z-index: 99;
   display: flex;
   font-size: 18px;
   justify-content: space-around;
@@ -224,13 +224,13 @@ span {
   position: absolute;
   top: 0;
   right: 0;
-  z-index: 999;
+  z-index: 995;
   height: 100%;
   overflow: hidden;
   background-color: white;
 }
 .app_menu_dark {
-  background: #1f1f1f;
+  background-color: #1f1f1f;
   color: #ffff;
 }
 .info {
@@ -260,60 +260,66 @@ span {
 .b_versesize_btn {
   padding: 12px 50px;
   border-radius: 5px;
-  background: white;
+  background-color: white;
   box-shadow: 0 6px 13px lightgray;
 }
 .b_versesize_btn_dark {
-  background: #333333;
+  background-color: #333333;
   box-shadow: none;
 }
 /* dropdown box for fonts */
-.dropdown_main_cont, .b_book_dd_cont {
+.dropdown_main_cont {
   width: 100%;
-  background: white;
+  background-color: white;
   box-shadow: 0 6px 13px lightgray;
   border-radius: 5px;
   position: relative;
   cursor: pointer;
 }
-.dropdown_main_cont_dark, .b_book_dd_cont_dark {
-  background: #333333;
+.dropdown_main_cont_dark {
+  background-color: #333333;
   box-shadow: none;
   color: white;
 }
-.b_book_dd_cont{
+
+.b_book_dd_cont {
   box-shadow: none;
   border-bottom: 1px solid #d5d5d5;
 }
 /* book navigation dd open */
-.b_book_dd_cont_open{
+.b_book_dd_cont_open {
   padding-bottom: 20px;
 }
-/* rotate icon */
-.drop_icon{
-  transition: all 250ms ease-out;
-
+.b_book_dd_cont_dark {
+  background-color: #1f1f1f;
+  border-radius: 0;
+  box-shadow: none;
+  border-bottom: 1px solid #f0f0f0;
 }
-.rotate_btnicon{
+/* rotate icon */
+.drop_icon {
+  transition: all 250ms ease-out;
+}
+.rotate_btnicon {
   transform: rotate(180deg);
   transition: all 250ms ease-in;
 }
 /* rotate icon */
 /* chapter drop down */
-.b_dd_chapter_cont{
+.b_dd_chapter_cont {
   display: none;
   padding-bottom: 20px;
 }
 /* End chapter drop down */
-.b_dd_cpts{
+.b_dd_cpts {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-row-gap: 15px;
   grid-auto-rows: minmax(min-content, max-content);
   justify-items: center;
-  margin:15px 0;
+  margin: 15px 0;
 }
-.chapter_box{
+.chapter_box {
   width: 45px;
   height: 45px;
   border: 1px solid #d5d5d5;
@@ -322,23 +328,25 @@ span {
   justify-content: center;
   align-items: center;
 }
-.cb_active{
+.cb_active {
   background-color: #d5d5d5;
   border: 1px solid #333333;
 }
-.cb_active_dark{
-  background-color: #333333;
+.cb_active_dark {
+  background-color: #f0f0f0;
   border: 1px solid #d5d5d5;
   color: black;
 }
-.selection_cont, .b_book_c_dd_btn_cl {
+.selection_cont,
+.b_book_c_dd_btn_cl {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 12px 15px;
   position: relative;
 }
-.selection_cont_dark,.b_book_c_dd_btn_cl_dark{
+.selection_cont_dark,
+.b_book_c_dd_btn_cl_dark {
   display: flex;
   justify-content: space-between;
   border: none;
@@ -349,7 +357,8 @@ span {
   border-radius: 5px 5px 0 0;
   border: 1px solid #d5d5d5;
 }
-.font_list_cont,.b_dd_list {
+.font_list_cont,
+.b_dd_list {
   padding: 10px 0;
   max-height: 150px;
   width: 95%;
@@ -369,7 +378,7 @@ span {
   display: none;
   z-index: 9;
 }
-.font_list_cont_dark {
+.font_list_cont_dark,.b_dd_list_dark {
   background-color: #333333;
   border: 1px solid #d5d5d5;
   box-shadow: none;
@@ -399,7 +408,7 @@ span {
   top: 0;
   left: 0;
   opacity: 1;
-  z-index: 9999999;
+  z-index: 9995;
   background-color: white;
   transition: opacity 350ms ease-in;
 }
@@ -538,7 +547,7 @@ span {
   align-items: center;
 }
 .info_dark {
-  background: #1f1f1f;
+  background-color: #1f1f1f;
   color: #ffff;
 }
 .info > * {
@@ -568,7 +577,7 @@ span {
   line-height: 1.8;
 }
 .bible_read_body_dark {
-  background: #1f1f1f;
+  background-color: #1f1f1f;
   color: #ffff;
 }
 .highlight_box {
@@ -578,7 +587,7 @@ span {
   display: flex;
   flex-direction: column;
   border-radius: 15px 15px 0 0;
-  background: #ffff;
+  background-color: #ffff;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -586,7 +595,7 @@ span {
   z-index: 99999;
 }
 .highlight_box_dark {
-  background: #1f1f1f;
+  background-color: #1f1f1f;
   color: #ffff;
 }
 .hlb_header {
@@ -612,8 +621,11 @@ span {
   top: 20px;
   right: 20px;
 }
+.nav_close_btn_dark {
+background-color: #353535;
+}
 /* close btn overlay */
-.b_btn_overlay_click{
+.b_btn_overlay_click {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -623,7 +635,7 @@ span {
 }
 .close_hlb_dark,
 .close_btn_dark {
-  background: #353535;
+  background-color: #353535;
   color: #ffff;
 }
 .color_box {
@@ -637,7 +649,7 @@ span {
 }
 
 .color_box_dark {
-  background: #353535;
+  background-color: #353535;
   color: #ffff;
 }
 #delete_hl {
@@ -673,7 +685,7 @@ span {
   width: 55px;
   height: 27px;
   border: 1px solid black;
-  background: #333333;
+  background-color: #333333;
   border-radius: 50px;
   display: flex;
   position: relative;
@@ -681,7 +693,7 @@ span {
 }
 .switch_dark {
   border: 1px solid #ffff;
-  background: #353535;
+  background-color: #353535;
   color: white;
 }
 .toggler {
@@ -689,7 +701,7 @@ span {
   width: 30px;
   position: absolute;
   /* left: -2px; */
-  background: white;
+  background-color: white;
   border-radius: 50%;
   border: 1px solid black;
   display: flex;
@@ -700,7 +712,7 @@ span {
 }
 
 .toggler_dark {
-  background: #ffff;
+  background-color: #ffff;
   color: #1f1f1f;
 }
 /* Extra large devices (large desktops, 1200px and up) */
